tests/ui/parser/anon-enums.stderr
error[E0308]: mismatched types
  --> $DIR/anon-enums.rs:10:18
   |
LL |     let _: i32 = foo(true);
   |            ---   ^^^^^^^^^ expected `i32`, found anonymous enum
   |            |
   |            expected due to this
   |
   = note:        expected type `i32`
           found anonymous enum `i32|f64|`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
